--- a/html/index.html
+++ b/html/index.html
@@ -556,22 +556,26 @@
                     <div class="tab-contents">
                         <div id="tab01" class="device-slick design-slick tab-menu on" data-tab="#tab01">
                             <div class="pager">
-                                <div class="prev">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="30.573" height="60.146" viewBox="0 0 30.573 60.146">
-                                        <g id="group_14307" data-name="group_14307" transform="translate(1.5 -94.427)">
-                                          <path id="path_60777" data-name="path 60777" d="M3784,3752l-18,27.96,18,28.04" transform="translate(-3766 -3655.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                          <path id="path_60778" data-name="path 60778" d="M3784,3752l-18,27.96,18,28.04" transform="translate(-3757 -3655.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                        </g>
-                                    </svg>                                      
-                                </div>
-                                <div class="next">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="30.573" height="60.146" viewBox="0 0 30.573 60.146">
-                                        <g id="group_14306" data-name="group_14306" transform="translate(-1764.927 -3749.927)">
-                                          <path id="path_60777" data-name="path 60777" d="M3766,3752l18,27.96L3766,3808" transform="translate(-1990)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                          <path id="path_60778" data-name="path 60778" d="M3766,3752l18,27.96L3766,3808" transform="translate(-1999)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                        </g>
-                                      </svg>                                      
-                                </div>
+                                <span class="prev-wrap">
+                                    <div class="prev">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="30.573" height="60.146" viewBox="0 0 30.573 60.146">
+                                            <g id="group_14307" data-name="group_14307" transform="translate(1.5 -94.427)">
+                                                <path id="path_60777" data-name="path 60777" d="M3784,3752l-18,27.96,18,28.04" transform="translate(-3766 -3655.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                                                <path id="path_60778" data-name="path 60778" d="M3784,3752l-18,27.96,18,28.04" transform="translate(-3757 -3655.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                                            </g>
+                                        </svg>                                      
+                                    </div>
+                                </span>
+                                <span class="next-wrap">
+                                    <div class="next">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="30.573" height="60.146" viewBox="0 0 30.573 60.146">
+                                            <g id="group_14306" data-name="group_14306" transform="translate(-1764.927 -3749.927)">
+                                                <path id="path_60777" data-name="path 60777" d="M3766,3752l18,27.96L3766,3808" transform="translate(-1990)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                                                <path id="path_60778" data-name="path 60778" d="M3766,3752l18,27.96L3766,3808" transform="translate(-1999)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                                            </g>
+                                        </svg>                                      
+                                    </div>
+                                </span>
                             </div>
                             <div class="device-container">
                                 <div class="ipad">
@@ -744,22 +748,26 @@
                         </div>
                         <div id="tab02" class="device-slick dev-slick tab-menu" data-tab="#tab02">
                             <div class="pager">
-                                <div class="prev">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="30.573" height="60.146" viewBox="0 0 30.573 60.146">
-                                        <g id="group_14307" data-name="group_14307" transform="translate(1.5 -94.427)">
-                                          <path id="path_60777" data-name="path 60777" d="M3784,3752l-18,27.96,18,28.04" transform="translate(-3766 -3655.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                          <path id="path_60778" data-name="path 60778" d="M3784,3752l-18,27.96,18,28.04" transform="translate(-3757 -3655.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                        </g>
-                                      </svg>                                      
-                                </div>
-                                <div class="next">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="30.573" height="60.146" viewBox="0 0 30.573 60.146">
-                                        <g id="group_14306" data-name="group_14306" transform="translate(-1764.927 -3749.927)">
-                                          <path id="path_60777" data-name="path 60777" d="M3766,3752l18,27.96L3766,3808" transform="translate(-1990)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                          <path id="path_60778" data-name="path 60778" d="M3766,3752l18,27.96L3766,3808" transform="translate(-1999)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                                        </g>
-                                      </svg>                                      
-                                </div>
+                                <span class="prev-wrap">
+                                    <div class="prev">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="30.573" height="60.146" viewBox="0 0 30.573 60.146">
+                                            <g id="group_14307" data-name="group_14307" transform="translate(1.5 -94.427)">
+                                                <path id="path_60777" data-name="path 60777" d="M3784,3752l-18,27.96,18,28.04" transform="translate(-3766 -3655.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                                                <path id="path_60778" data-name="path 60778" d="M3784,3752l-18,27.96,18,28.04" transform="translate(-3757 -3655.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                                            </g>
+                                        </svg>                                      
+                                    </div>
+                                </span>
+                                <span class="next-wrap">
+                                    <div class="next">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="30.573" height="60.146" viewBox="0 0 30.573 60.146">
+                                            <g id="group_14306" data-name="group_14306" transform="translate(-1764.927 -3749.927)">
+                                                <path id="path_60777" data-name="path 60777" d="M3766,3752l18,27.96L3766,3808" transform="translate(-1990)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                                                <path id="path_60778" data-name="path 60778" d="M3766,3752l18,27.96L3766,3808" transform="translate(-1999)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                                            </g>
+                                        </svg>                                      
+                                    </div>
+                                </span>
                             </div>
                             <div class="device-container">
                                 <div class="imac">
@@ -857,7 +865,7 @@
                         <div class="contact-main">
                             <div class="title-mid">Get in Touch!</div>
                             <div class="email-form">
-                                <form id="contact-form" class="form-area" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbzi6YI8bTPgvRRmQl0SHKwH-3zfvawM6labqxGds2Xg3QimaAE8PwHQ4Pdm-sOagf4NUw/exec" target="frAttachFiles">
+                                <form id="contact-form" class="form-area" data-email="example@email.net">
                                     <ul class="form-list">
                                         <li class="form-item">
                                             <div class="item-name">
@@ -876,7 +884,7 @@
                                             </div>
                                         </li>
                                     </ul>
-                                    <button type="button" class="sendBtn" >Send Me!</button>
+                                    <button onclick="sendFormData(event);" class="sendBtn" >Send Me!</button>
                                 </form>
                                 <iframe name="frAttachFiles" style="display: none;"></iframe>
                             </div>
@@ -904,54 +912,91 @@
                 $('#' + activeTab).addClass('on');
                 
                 // 탭이 변경될 때마다 slick 캐러셀을 새로고침
-                $('.device-slick .device-container').slick('refresh');
+                // $('.device-slick .device-container').slick('refresh');
                 $('.design-slick .display-list').slick('refresh');
                 $('.dev-slick .display-list').slick('refresh');
             });
 
             // 페이지 로드 시 slick 캐러셀 초기화
-            $('.device-slick .device-container').slick({
+            // $('.device-slick .device-container').slick({
+            //     slide: 'li',
+            //     infinite: true,
+            //     slidesToShow: 1,
+            //     slidesToScroll: 1,
+            //     autoplay: true,
+            //     autoplaySpeed: 1500,
+            //     draggable: true,
+            //     dots: false,
+            //     prevArrow: $('.device-slick .pager .prev'),
+            //     nextArrow: $('.device-slick .pager .next'),
+            //     speed: 1500,
+            // });
+
+            // 페이지 로드 시 slick 캐러셀 초기화
+            // design slick 의 아이패드 캐러셀 초기화
+            $('.design-slick .ipad .display-list').slick({
                 slide: 'li',
                 infinite: true,
                 slidesToShow: 1,
                 slidesToScroll: 1,
-                autoplay: true,
+                autoplay: false,
                 autoplaySpeed: 1500,
                 draggable: true,
                 dots: false,
-                prevArrow: $('.device-slick .pager .prev'),
-                nextArrow: $('.device-slick .pager .next'),
+                prevArrow: $('.design-slick .pager .prev-wrap'),
+                nextArrow: $('.design-slick .pager .next-wrap'),
                 speed: 1500,
+                touchThreshold: 100,
             });
 
-            // 페이지 로드 시 slick 캐러셀 초기화
-            $('.design-slick .display-list').slick({
+            // design slick에 있는 아이폰 캐러셀 초기화
+            $('.design-slick .iphone .display-list').slick({
                 slide: 'li',
                 infinite: true,
                 slidesToShow: 1,
                 slidesToScroll: 1,
-                autoplay: true,
+                autoplay: false,
                 autoplaySpeed: 1500,
                 draggable: true,
                 dots: false,
                 prevArrow: $('.design-slick .pager .prev'),
                 nextArrow: $('.design-slick .pager .next'),
                 speed: 1500,
+                touchThreshold: 100,
             });
 
+
             // 페이지 로드 시 slick 캐러셀 초기화
-            $('.dev-slick .display-list').slick({
+            // dev-slick imac 캐러셀 초기화
+            $('.dev-slick .imac .display-list').slick({
                 slide: 'li',
                 infinite: true,
                 slidesToShow: 1,
                 slidesToScroll: 1,
-                autoplay: true,
+                autoplay: false,
+                autoplaySpeed: 1500,
+                draggable: true,
+                dots: false,
+                prevArrow: $('.dev-slick .pager .prev-wrap'),
+                nextArrow: $('.dev-slick .pager .next-wrap'),
+                speed: 1500,
+                touchThreshold: 100,
+            });
+
+            // dev-slick ipad 캐러셀 초기화
+            $('.dev-slick .ipad .display-list').slick({
+                slide: 'li',
+                infinite: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: false,
                 autoplaySpeed: 1500,
                 draggable: true,
                 dots: false,
                 prevArrow: $('.dev-slick .pager .prev'),
                 nextArrow: $('.dev-slick .pager .next'),
                 speed: 1500,
+                touchThreshold: 100,
             });
         });
     </script>
@@ -961,7 +1006,7 @@
             // 각 슬라이드(.design-slick과 .dev-slick)의 li 요소를 클릭했을 때 모달창을 보여줌
             $('.design-slick .display-list li').click(function() {
                 // 클릭한 li 요소의 인덱스를 가져옴 (0부터 시작)
-                var index = $(this).index() + 1;
+                var index = $(this).index() ;
                 $('.design-modal' + index).show();
                 // 모달창이 떴을 때 바디 스크롤 막음
                 $('body').css('overflow', 'hidden');
@@ -970,7 +1015,7 @@
 
             $('.dev-slick .display-list li').click(function() {
                 // 클릭한 li 요소의 인덱스를 가져옴 (0부터 시작)
-                var index = $(this).index() + 1;
+                var index = $(this).index() ;
                 $('.dev-modal' + index).show();
                 // 모달창이 떴을 때 바디 스크롤 막음
                 $('body').css('overflow', 'hidden');
@@ -995,39 +1040,43 @@
         });
     </script>
 
-    <!-- <script type="text/javascript">
-        function sendFormData() {
+    <script type="text/javascript">
+        
+        function sendFormData(event) {
+            event.preventDefault();
             var formData = new FormData(document.getElementById('contact-form'));
-
+            console.log(formData);
             // Ajax 요청
             $.ajax({
-                url:'https://script.google.com/macros/s/AKfycbzi6YI8bTPgvRRmQl0SHKwH-3zfvawM6labqxGds2Xg3QimaAE8PwHQ4Pdm-sOagf4NUw/exec',
+                url:'https://script.google.com/macros/s/AKfycbyUAJpDK1FXU3HY91E9U8esrqfYvvEbY65FfDsT2SJDkJiJjKSZGGXZh8EM8eiUW7Am8Q/exec',
                 type: 'POST',
                 data: formData,
                 processData: false,
                 contentType: false,
-                complete: function() {
-                    // Ajax 요청이 완료되면 항상 실행됨
-                    alert('보내졌습니다!');
-                    document.getElementById('contact-form').reset(); // 폼 초기화
-                    location.reload(); // 페이지 새로고침
-                }
-                // success: function(response) {
-                //     // Ajax 요청이 성공한 경우
+                // complete: function() {
+                //     // Ajax 요청이 완료되면 항상 실행됨
                 //     alert('보내졌습니다!');
                 //     document.getElementById('contact-form').reset(); // 폼 초기화
                 //     location.reload(); // 페이지 새로고침
-                // },
-                // error: function(error) {
-                //     // Ajax 요청이 실패한 경우
-                //     alert('전송 오류가 발생했습니다. 다시 시도해주세요.');
                 // }
+                success: function(response) {
+                    // Ajax 요청이 성공한 경우
+                    console.log(response);
+                    alert('보내졌습니다!');
+                    document.getElementById('contact-form').reset(); // 폼 초기화
+                    //location.reload(); // 페이지 새로고침
+                },
+                error: function(error) {
+                    // Ajax 요청이 실패한 경우
+                    console.log(error);
+                    alert('전송 오류가 발생했습니다. 다시 시도해주세요.');
+                }
                 // error: function(error) {
                 //     // Ajax 요청이 실패한 경우
                 //     alert('전송 오류가 발생했습니다. 다시 시도해주세요.');
                 // }
             });
         }
-    </script> -->
+    </script>
 </body>
 </html>
