--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/slick.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/xpressengine/xeicon@2.3.1/xeicon.min.css">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="../js/slick/slick.min.js"></script>
@@ -28,19 +29,19 @@
                     <div class="gnb">
                         <ul class="nav-list">
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="item">Home</a>
+                                <a href="#home" class="item">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="item">About</a>
+                                <a href="#about" class="item">About</a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="item">Skills</a>
+                                <a href="#skills" class="item">Skills</a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="item">PortFolio</a>
+                                <a href="#portfolio" class="item">PortFolio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0);" class="item">Contact</a>
+                                <a href="#contact" class="item">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -48,7 +49,7 @@
             </div>
         </header>
         <main>
-            <section class="home">
+            <section id="home" class="home">
                 <div class="main-img"></div>
                 <div class="main-bus">
                     <img src="../img/main-bus.png" class="bus-item" width="730px" height="620px">
@@ -56,11 +57,11 @@
                 <div class="main-title">
                     <p>
                         사소한 것도 놓치지 않는<br>
-                        퍼블리셔 HSH 입니다
+                        퍼블리셔 황선하 입니다
                     </p>
                 </div>
             </section>
-            <section class="about">
+            <section id="about" class="about">
                 <div class="title">
                     <div class="title-num">01</div>
                     <div class="title-txt">About</div>
@@ -68,7 +69,7 @@
                 <div class="contents">
                     <div class="about-me">
                         <div class="img"></div>
-                        <div class="name">HSH</div>
+                        <div class="name">황선하</div>
                     </div>
                     <div class="about-info">
                         <div class="status-bar">
@@ -247,7 +248,7 @@
                     </div>
                 </div>
             </section>
-            <section class="skills">
+            <section id="skills" class="skills">
                 <div class="title">
                     <div class="title-num">02</div>
                     <div class="title-txt">Skills</div>
@@ -540,7 +541,7 @@
                     </div>
                 </div>
             </section>
-            <section class="portfolio">
+            <section id="portfolio" class="portfolio">
                 <div class="title">
                     <div class="title-num">03</div>
                     <div class="title-txt">PortFolio</div>
@@ -799,7 +800,7 @@
                                 <div class="modal-window">
                                     <div class="modal-area">
                                         <ul class="modal-list">
-                                            <li class="modal-item"></li>
+                                            <li class="modal-item"><img src="../img/naver.png" class="item"></li>
                                         </ul>
                                     </div>
                                     <button type="button" class="close-button">
@@ -811,7 +812,7 @@
                                 <div class="modal-window">
                                     <div class="modal-area">
                                         <ul class="modal-list">
-                                            <li class="modal-item"></li>
+                                            <li class="modal-item"><img src="../img/hyundaiCard.png" class="item"></li>
                                         </ul>
                                     </div>
                                     <button type="button" class="close-button">
@@ -823,7 +824,7 @@
                                 <div class="modal-window">
                                     <div class="modal-area">
                                         <ul class="modal-list">
-                                            <li class="modal-item"></li>
+                                            <li class="modal-item"><img src="../img/ex.png" class="item"></li>
                                         </ul>
                                     </div>
                                     <button type="button" class="close-button">
@@ -835,7 +836,7 @@
                     </div>
                 </div>
             </section>
-            <section class="contact">
+            <section id="contact" class="contact">
                 <div class="title">
                     <div class="title-num">04</div>
                     <div class="title-txt">Contact</div>
@@ -851,7 +852,36 @@
                         </div>
                         <div class="contact-main">
                             <div class="title-mid">Let's Talk</div>
-                            <div class="talk-info"></div>
+                            <div class="talk-info">
+                                <div class="talk-style">
+                                    <div class="talk-title">My Work Style</div>
+                                    <ul class="style-list">
+                                        <li class="style-item">ENFP - T 🪇</li>
+                                        <li class="style-item">따뜻하고 정열적이며, 재능 많고 상상력이 풍부한 재기발랄한 활동가 🥁</li>
+                                        <li class="style-item">평소에는 차분하고 일할때는 j성향이 강해져서 계획적으로 변해요! 📝</li>
+                                        <li class="style-item">맡은 일에 책임감이 있어서 끝까지 놓지않고 해결해나가요 📔</li>
+                                        <li class="style-item">배우고싶은게 많아요(언어에 대한 욕심이 많아요) 📚</li>
+                                    </ul>
+                                </div>
+                                <div class="talk-line"></div>
+                                <div class="talk-keyword">
+                                    <div class="talk-title">Keyword</div>
+                                    <ul class="keyword-list">
+                                        <li class="keyword-item">#ENFP</li>
+                                        <li class="keyword-item">#꼼꼼함</li>
+                                        <li class="keyword-item">#성실함</li>
+                                        <li class="keyword-item">#호기심</li>
+                                        <li class="keyword-item">#활동적</li>
+                                        <li class="keyword-item">#긍정적</li>
+                                        <li class="keyword-item">#열정적</li>
+                                        <li class="keyword-item">#공감능력</li>
+                                        <li class="keyword-item">#멀티태스킹</li>
+                                        <li class="keyword-item">#위기대처능력</li>
+                                        <li class="keyword-item">#자아성찰</li>
+                                        <li class="keyword-item">#다양한 관심사</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="contact-inTouch">
@@ -887,18 +917,36 @@
                                     <button onclick="sendFormData(event);" class="sendBtn" >Send Me!</button>
                                 </form>
                                 <iframe name="frAttachFiles" style="display: none;"></iframe>
+                                <div id="loading-modal" class="loading-modal">
+                                    <div class="modal-content">
+                                        <i class="xi-spinner-4 xi-spin xi-4x"></i>
+                                        <p>Loading</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-        <footer>
-            <!-- 만들까 말까 고민중 -->
-        </footer>
+        </main>
     </div>
 
     
 
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', function() {
+            const navLinks = document.querySelectorAll('.nav-list a');
+
+            navLinks.forEach(link => {
+                link.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    const targetId = this.getAttribute('href');
+                    const targetSection = document.querySelector(targetId);
+                    targetSection.scrollIntoView({ behavior: 'smooth' });
+                });
+            });
+        });
+    </script>
 
     <script type="text/javascript">
 
@@ -918,21 +966,6 @@
             });
 
             // 페이지 로드 시 slick 캐러셀 초기화
-            // $('.device-slick .device-container').slick({
-            //     slide: 'li',
-            //     infinite: true,
-            //     slidesToShow: 1,
-            //     slidesToScroll: 1,
-            //     autoplay: true,
-            //     autoplaySpeed: 1500,
-            //     draggable: true,
-            //     dots: false,
-            //     prevArrow: $('.device-slick .pager .prev'),
-            //     nextArrow: $('.device-slick .pager .next'),
-            //     speed: 1500,
-            // });
-
-            // 페이지 로드 시 slick 캐러셀 초기화
             // design slick 의 아이패드 캐러셀 초기화
             $('.design-slick .ipad .display-list').slick({
                 slide: 'li',
@@ -941,7 +974,7 @@
                 slidesToScroll: 1,
                 autoplay: false,
                 autoplaySpeed: 1500,
-                draggable: true,
+                draggable: false,
                 dots: false,
                 prevArrow: $('.design-slick .pager .prev-wrap'),
                 nextArrow: $('.design-slick .pager .next-wrap'),
@@ -957,7 +990,7 @@
                 slidesToScroll: 1,
                 autoplay: false,
                 autoplaySpeed: 1500,
-                draggable: true,
+                draggable: false,
                 dots: false,
                 prevArrow: $('.design-slick .pager .prev'),
                 nextArrow: $('.design-slick .pager .next'),
@@ -975,7 +1008,7 @@
                 slidesToScroll: 1,
                 autoplay: false,
                 autoplaySpeed: 1500,
-                draggable: true,
+                draggable: false,
                 dots: false,
                 prevArrow: $('.dev-slick .pager .prev-wrap'),
                 nextArrow: $('.dev-slick .pager .next-wrap'),
@@ -991,7 +1024,7 @@
                 slidesToScroll: 1,
                 autoplay: false,
                 autoplaySpeed: 1500,
-                draggable: true,
+                draggable: false,
                 dots: false,
                 prevArrow: $('.dev-slick .pager .prev'),
                 nextArrow: $('.dev-slick .pager .next'),
@@ -1004,22 +1037,28 @@
     <script type="text/javascript">
         $(document).ready(function() {
             // 각 슬라이드(.design-slick과 .dev-slick)의 li 요소를 클릭했을 때 모달창을 보여줌
-            $('.design-slick .display-list li').click(function() {
-                // 클릭한 li 요소의 인덱스를 가져옴 (0부터 시작)
-                var index = $(this).index() ;
-                $('.design-modal' + index).show();
-                // 모달창이 떴을 때 바디 스크롤 막음
-                $('body').css('overflow', 'hidden');
-                $('.modal').css('opacity', '1');
+            $('.design-slick .display-list li').click(function(event) {
+                if(!$('.modal').is(":visible")) {
+                    // 클릭한 li 요소의 인덱스를 가져옴 (0부터 시작)
+                    var index = $(this).index() ;
+                    $('.design-modal' + index).show();
+                    // 모달창이 떴을 때 바디 스크롤 막음
+                    $('body').css('overflow', 'hidden');
+                    $('.modal').css('opacity', '1');
+                    event.stopPropagation(); // 이벤트 버블링 차단
+                }
             });
 
-            $('.dev-slick .display-list li').click(function() {
-                // 클릭한 li 요소의 인덱스를 가져옴 (0부터 시작)
-                var index = $(this).index() ;
-                $('.dev-modal' + index).show();
-                // 모달창이 떴을 때 바디 스크롤 막음
-                $('body').css('overflow', 'hidden');
-                $('.modal').css('opacity', '1');
+            $('.dev-slick .display-list li').click(function(event) {
+                if(!$('.modal').is(":visible")) {
+                    // 클릭한 li 요소의 인덱스를 가져옴 (0부터 시작)
+                    var index = $(this).index() ;
+                    $('.dev-modal' + index).show();
+                    // 모달창이 떴을 때 바디 스크롤 막음
+                    $('body').css('overflow', 'hidden');
+                    $('.modal').css('opacity', '1');
+                    event.stopPropagation(); // 이벤트 버블링 차단
+                }
             });
 
             // 닫기 버튼을 클릭했을 때 모달창을 숨김
@@ -1044,6 +1083,18 @@
         
         function sendFormData(event) {
             event.preventDefault();
+            // 모달 창 보여주기 loading
+            var modal = document.getElementById('loading-modal');
+            modal.style.display = 'flex';
+
+            // 기존 z-index 값 저장
+            var contactTalkZindex = document.querySelector('.contact-talk').style.zIndex;
+            var contactInTouchZindex = document.querySelector('.contact-inTouch').style.zIndex;
+
+            // 동일한 z-index 값을 설정
+            document.querySelector('.contact-talk').style.zIndex = 0;
+            document.querySelector('.contact-inTouch').style.zIndex = 0;
+
             var formData = new FormData(document.getElementById('contact-form'));
             console.log(formData);
             // Ajax 요청
@@ -1061,15 +1112,25 @@
                 // }
                 success: function(response) {
                     // Ajax 요청이 성공한 경우
+                    modal.style.display = 'none'; // 모달 창 숨기기
                     console.log(response);
                     alert('보내졌습니다!');
                     document.getElementById('contact-form').reset(); // 폼 초기화
                     //location.reload(); // 페이지 새로고침
+
+                    // 모달 창이 숨겨진 후 원래의 z-index 값으로 복구
+                    document.querySelector('.contact-talk').style.zIndex = contactTalkZindex;
+                    document.querySelector('.contact-inTouch').style.zIndex = contactInTouchZindex;
                 },
                 error: function(error) {
                     // Ajax 요청이 실패한 경우
+                    modal.style.display = 'none'; // 모달 창 숨기기
                     console.log(error);
                     alert('전송 오류가 발생했습니다. 다시 시도해주세요.');
+
+                    // 모달 창이 숨겨진 후 원래의 z-index 값으로 복구
+                    document.querySelector('.contact-talk').style.zIndex = contactTalkZindex;
+                    document.querySelector('.contact-inTouch').style.zIndex = contactInTouchZindex;
                 }
                 // error: function(error) {
                 //     // Ajax 요청이 실패한 경우
